# Ros_from_the_construct

./: .gitmodules  README.md
ROS book/: Coursera.docx
Ros_Basic_in_5_days/src/actions_quiz/: CMakeLists.txt  package.xml
Ros_Basic_in_5_days/src/exercise4_2/: CMakeLists.txt  package.xml
Ros_Basic_in_5_days/src/exercise_6_2/: CMakeLists.txt  package.xml
Ros_Basic_in_5_days/src/exercise_7_6/: CMakeLists.txt  package.xml
Ros_Basic_in_5_days/src/exercise_8_1_3/: CMakeLists.txt  package.xml
Ros_Basic_in_5_days/src/exercise_package/: CMakeLists.txt  package.xml
Ros_Basic_in_5_days/src/my_examples_pkg/: CMakeLists.txt  package.xml
basic kinematics mobile robot/src/: loop_trajectory.py  rotations_conversion.py  unit2_positions.py
foxy_ros_c_plus_plus/actions_project/: CMakeLists.txt  package.xml
foxy_ros_c_plus_plus/bb8_cpp_unit_3_services/: CMakeLists.txt  package.xml
foxy_ros_c_plus_plus/bb8_cpp_unit_3_services/include/bb8_cpp_unit_3_services/: move_bb8.hpp
foxy_ros_c_plus_plus/bb8_cpp_unit_3_services/launch/: start_move_in_square_client.launch.py
foxy_ros_c_plus_plus/bb8_cpp_unit_3_services/src/: move_bb8.cpp  square_service_client.cpp
foxy_ros_c_plus_plus/cpp_unit_7_services/: CMakeLists.txt  package.xml
foxy_ros_c_plus_plus/exercise_4_2_robot_move/: CMakeLists.txt  package.xml
foxy_ros_c_plus_plus/logs_test/: CMakeLists.txt
foxy_ros_c_plus_plus/my_action_client/: CMakeLists.txt  package.xml
foxy_ros_c_plus_plus/my_action_server/: CMakeLists.txt
foxy_ros_c_plus_plus/odom_subscriber_pkg/: CMakeLists.txt  package.xml
foxy_ros_c_plus_plus/topic_mini_project_pkg/: CMakeLists.txt  package.xml
foxy_ros_c_plus_plus/topic_subscriber_pkg/: CMakeLists.txt  package.xml
foxy_ros_c_plus_plus/unit_8_services_custom_msgs/: CMakeLists.txt  package.xml
perception_ros/my_face_detector/: tutorial.txt
ros _navigation_in_5_days/src/: frames.gv  my_map.pgm
ros tf/src/: frames.gv
src/my_summit_localization/: CMakeLists.txt  package.xml
src/my_summit_navigation/: CMakeLists.txt
src/navigation_exam/: CMakeLists.txt  package.xml
src/transfrom/: CMakeLists.txt  package.xml
(+192 files in other folders)
